[tool.black]
line-length = 80

[tool.poetry]
name = "t"
version = "0.1.1"
description = "Wrapper around trash-cli that adds a directory exclusion list and some interactive features."
authors = ["Adam Heins <mail@adamheins.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"

docopt = "^0.6.2"
trash-cli = "^0.24.5.26"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
t = "t.cli:main"
