[project]
name = "t"
version = "0.1.1"
description = "Wrapper around trash-cli that adds a directory exclusion list and some interactive features."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8,<3.13"
dependencies = [
    "docopt>=0.6.2",
    "trash-cli>=0.24.5.26",
]

[project.scripts]
t = "t.cli:main"
