[project]
name = "t"
version = "0.1.1"
description = "Wrapper around trash-cli that adds a directory exclusion list and some interactive features."
authors = [
  {name = "Adam Heins", email = "mail@adamheins.com"}
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8,<3.13"
dependencies = [
    "colorama>=0.4.6",
    "trash-cli>=0.24.5.26",
]

[project.scripts]
t = "t.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
